-include $(top_builddir)/sedsub.mk

noinst_HEADERS = $(NULL)
noinst_HEADERS += config.h
noinst_HEADERS += config-am.h
noinst_HEADERS += silofs/configs.h
noinst_HEADERS += linux/fuse_kernel.h

nobase_include_HEADERS = $(NULL)
nobase_include_HEADERS += silofs/ccattr.h
nobase_include_HEADERS += silofs/consts.h
nobase_include_HEADERS += silofs/defs.h
nobase_include_HEADERS += silofs/errors.h
nobase_include_HEADERS += silofs/execlib.h
nobase_include_HEADERS += silofs/flags.h
nobase_include_HEADERS += silofs/ioctls.h
nobase_include_HEADERS += silofs/macros.h
nobase_include_HEADERS += silofs/syscall.h
nobase_include_HEADERS += silofs/version.h
nobase_include_HEADERS += silofs/libsilofs.h
nobase_include_HEADERS += silofs/infra/atomic.h
nobase_include_HEADERS += silofs/infra/avl.h
nobase_include_HEADERS += silofs/infra/base64.h
nobase_include_HEADERS += silofs/infra/bytebuf.h
nobase_include_HEADERS += silofs/infra/hash.h
nobase_include_HEADERS += silofs/infra/iovec.h
nobase_include_HEADERS += silofs/infra/list.h
nobase_include_HEADERS += silofs/infra/logging.h
nobase_include_HEADERS += silofs/infra/panic.h
nobase_include_HEADERS += silofs/infra/pipe.h
nobase_include_HEADERS += silofs/infra/qalloc.h
nobase_include_HEADERS += silofs/infra/random.h
nobase_include_HEADERS += silofs/infra/socket.h
nobase_include_HEADERS += silofs/infra/thread.h
nobase_include_HEADERS += silofs/infra/time.h
nobase_include_HEADERS += silofs/infra/utility.h
nobase_include_HEADERS += silofs/infra/zcmpr.h
nobase_include_HEADERS += silofs/infra.h
nobase_include_HEADERS += silofs/infra-private.h
nobase_include_HEADERS += silofs/str/ascii.h
nobase_include_HEADERS += silofs/str/strbuf.h
nobase_include_HEADERS += silofs/str/strchr.h
nobase_include_HEADERS += silofs/str/strspan.h
nobase_include_HEADERS += silofs/str/strview.h
nobase_include_HEADERS += silofs/str.h
nobase_include_HEADERS += silofs/addr/blobid.h
nobase_include_HEADERS += silofs/addr/caddr.h
nobase_include_HEADERS += silofs/addr/hmapq.h
nobase_include_HEADERS += silofs/addr/htox.h
nobase_include_HEADERS += silofs/addr/ivkey.h
nobase_include_HEADERS += silofs/addr/laddr.h
nobase_include_HEADERS += silofs/addr/ltype.h
nobase_include_HEADERS += silofs/addr/meta.h
nobase_include_HEADERS += silofs/addr/offlba.h
nobase_include_HEADERS += silofs/addr/paddr.h
nobase_include_HEADERS += silofs/addr/uaddr.h
nobase_include_HEADERS += silofs/addr/vaddr.h
nobase_include_HEADERS += silofs/addr.h
nobase_include_HEADERS += silofs/addr-private.h
nobase_include_HEADERS += silofs/ps/blobs.h
nobase_include_HEADERS += silofs/ps/crypto.h
nobase_include_HEADERS += silofs/ps/bcache.h
nobase_include_HEADERS += silofs/ps/pnodes.h
nobase_include_HEADERS += silofs/ps/repo.h
nobase_include_HEADERS += silofs/ps/psenv.h
nobase_include_HEADERS += silofs/ps.h
nobase_include_HEADERS += silofs/fs/boot.h
nobase_include_HEADERS += silofs/fs/claim.h
nobase_include_HEADERS += silofs/fs/dir.h
nobase_include_HEADERS += silofs/fs/encdec.h
nobase_include_HEADERS += silofs/fs/file.h
nobase_include_HEADERS += silofs/fs/flush.h
nobase_include_HEADERS += silofs/fs/fsenv.h
nobase_include_HEADERS += silofs/fs/fuseq.h
nobase_include_HEADERS += silofs/fs/idmap.h
nobase_include_HEADERS += silofs/fs/inode.h
nobase_include_HEADERS += silofs/fs/lcache.h
nobase_include_HEADERS += silofs/fs/lnodes.h
nobase_include_HEADERS += silofs/fs/mntsvc.h
nobase_include_HEADERS += silofs/fs/namei.h
nobase_include_HEADERS += silofs/fs/opers.h
nobase_include_HEADERS += silofs/fs/pack.h
nobase_include_HEADERS += silofs/fs/spmaps.h
nobase_include_HEADERS += silofs/fs/spxmap.h
nobase_include_HEADERS += silofs/fs/stats.h
nobase_include_HEADERS += silofs/fs/super.h
nobase_include_HEADERS += silofs/fs/symlink.h
nobase_include_HEADERS += silofs/fs/task.h
nobase_include_HEADERS += silofs/fs/types.h
nobase_include_HEADERS += silofs/fs/uidgid.h
nobase_include_HEADERS += silofs/fs/ustage.h
nobase_include_HEADERS += silofs/fs/vstage.h
nobase_include_HEADERS += silofs/fs/walk.h
nobase_include_HEADERS += silofs/fs/xattr.h
nobase_include_HEADERS += silofs/fs.h
nobase_include_HEADERS += silofs/fs-private.h

EXTRA_DIST = config-am.h.in

config-am.h: config-am.h.in
	$(silofs_sedsub) "$<" > "$@"
