-include $(top_builddir)/sedsub.mk

noinst_HEADERS = $(NULL)
noinst_HEADERS += config.h
noinst_HEADERS += config-am.h
noinst_HEADERS += silofs/configs.h
noinst_HEADERS += linux/fuse_kernel.h

nobase_include_HEADERS = $(NULL)
nobase_include_HEADERS += silofs.h
nobase_include_HEADERS += silofs/addr.h
nobase_include_HEADERS += silofs/addr-private.h
nobase_include_HEADERS += silofs/addr/blobid.h
nobase_include_HEADERS += silofs/addr/caddr.h
nobase_include_HEADERS += silofs/addr/htox.h
nobase_include_HEADERS += silofs/addr/laddr.h
nobase_include_HEADERS += silofs/addr/ltype.h
nobase_include_HEADERS += silofs/addr/meta.h
nobase_include_HEADERS += silofs/addr/offlba.h
nobase_include_HEADERS += silofs/addr/paddr.h
nobase_include_HEADERS += silofs/addr/uaddr.h
nobase_include_HEADERS += silofs/addr/vaddr.h
nobase_include_HEADERS += silofs/boot.h
nobase_include_HEADERS += silofs/bstore.h
nobase_include_HEADERS += silofs/ccattr.h
nobase_include_HEADERS += silofs/claim.h
nobase_include_HEADERS += silofs/consts.h
nobase_include_HEADERS += silofs/crypt.h
nobase_include_HEADERS += silofs/crypt/cipher.h
nobase_include_HEADERS += silofs/crypt/gcry.h
nobase_include_HEADERS += silofs/crypt/ivkey.h
nobase_include_HEADERS += silofs/crypt/mdigest.h
nobase_include_HEADERS += silofs/crypt/passwd.h
nobase_include_HEADERS += silofs/defs.h
nobase_include_HEADERS += silofs/dir.h
nobase_include_HEADERS += silofs/encdec.h
nobase_include_HEADERS += silofs/errors.h
nobase_include_HEADERS += silofs/execlib.h
nobase_include_HEADERS += silofs/file.h
nobase_include_HEADERS += silofs/flush.h
nobase_include_HEADERS += silofs/fs.h
nobase_include_HEADERS += silofs/fsenv.h
nobase_include_HEADERS += silofs/fs-private.h
nobase_include_HEADERS += silofs/fuseq.h
nobase_include_HEADERS += silofs/hmdq.h
nobase_include_HEADERS += silofs/hmdq/dirtyq.h
nobase_include_HEADERS += silofs/hmdq/hmapq.h
nobase_include_HEADERS += silofs/idsmap.h
nobase_include_HEADERS += silofs/infra.h
nobase_include_HEADERS += silofs/infra-private.h
nobase_include_HEADERS += silofs/infra/atomic.h
nobase_include_HEADERS += silofs/infra/avl.h
nobase_include_HEADERS += silofs/infra/base64.h
nobase_include_HEADERS += silofs/infra/bytebuf.h
nobase_include_HEADERS += silofs/infra/hash.h
nobase_include_HEADERS += silofs/infra/iovec.h
nobase_include_HEADERS += silofs/infra/list.h
nobase_include_HEADERS += silofs/infra/logging.h
nobase_include_HEADERS += silofs/infra/panic.h
nobase_include_HEADERS += silofs/infra/pipe.h
nobase_include_HEADERS += silofs/infra/qalloc.h
nobase_include_HEADERS += silofs/infra/random.h
nobase_include_HEADERS += silofs/infra/socket.h
nobase_include_HEADERS += silofs/infra/thread.h
nobase_include_HEADERS += silofs/infra/time.h
nobase_include_HEADERS += silofs/infra/utility.h
nobase_include_HEADERS += silofs/infra/zcmpr.h
nobase_include_HEADERS += silofs/inode.h
nobase_include_HEADERS += silofs/ioctls.h
nobase_include_HEADERS += silofs/lcache.h
nobase_include_HEADERS += silofs/lnodes.h
nobase_include_HEADERS += silofs/macros.h
nobase_include_HEADERS += silofs/mntsvc.h
nobase_include_HEADERS += silofs/namei.h
nobase_include_HEADERS += silofs/opers.h
nobase_include_HEADERS += silofs/pack.h
nobase_include_HEADERS += silofs/pcache.h
nobase_include_HEADERS += silofs/pnodes.h
nobase_include_HEADERS += silofs/repo.h
nobase_include_HEADERS += silofs/spmaps.h
nobase_include_HEADERS += silofs/spxmap.h
nobase_include_HEADERS += silofs/stats.h
nobase_include_HEADERS += silofs/str.h
nobase_include_HEADERS += silofs/str/ascii.h
nobase_include_HEADERS += silofs/str/strbuf.h
nobase_include_HEADERS += silofs/str/strchr.h
nobase_include_HEADERS += silofs/str/strspan.h
nobase_include_HEADERS += silofs/str/strview.h
nobase_include_HEADERS += silofs/super.h
nobase_include_HEADERS += silofs/symlink.h
nobase_include_HEADERS += silofs/syscall.h
nobase_include_HEADERS += silofs/task.h
nobase_include_HEADERS += silofs/types.h
nobase_include_HEADERS += silofs/uidgid.h
nobase_include_HEADERS += silofs/ustage.h
nobase_include_HEADERS += silofs/version.h
nobase_include_HEADERS += silofs/vstage.h
nobase_include_HEADERS += silofs/walk.h
nobase_include_HEADERS += silofs/xattr.h


EXTRA_DIST = config-am.h.in

config-am.h: config-am.h.in
	$(silofs_sedsub) "$<" > "$@"
