-include $(top_builddir)/common.mk

libsilofsdir = $(libdir)
libsilofs_LTLIBRARIES = $(NULL)

libsilofs_LTLIBRARIES += libsilofs_infra.la
libsilofs_infra_la_LDFLAGS = $(NULL)
libsilofs_infra_la_LDFLAGS += $(PTHREAD_CFLAGS) $(PTHREAD_DEF)
libsilofs_infra_la_LDFLAGS += -version-info 0
libsilofs_infra_la_CPPFLAGS = $(NULL)
libsilofs_infra_la_CPPFLAGS += -I$(top_srcdir)/include
libsilofs_infra_la_LIBADD = $(NULL)
libsilofs_infra_la_LIBADD += @LIBS@
libsilofs_infra_la_LIBADD += $(PTHREAD_LIBS)
libsilofs_infra_la_SOURCES = $(NULL)
libsilofs_infra_la_SOURCES += avl.c
libsilofs_infra_la_SOURCES += base64.c
libsilofs_infra_la_SOURCES += bytebuf.c
libsilofs_infra_la_SOURCES += iovec.c
libsilofs_infra_la_SOURCES += hash.c
libsilofs_infra_la_SOURCES += list.c
libsilofs_infra_la_SOURCES += logging.c
libsilofs_infra_la_SOURCES += panic.c
libsilofs_infra_la_SOURCES += pipe.c
libsilofs_infra_la_SOURCES += qalloc.c
libsilofs_infra_la_SOURCES += random.c
libsilofs_infra_la_SOURCES += socket.c
libsilofs_infra_la_SOURCES += strings.c
libsilofs_infra_la_SOURCES += syscall.c
libsilofs_infra_la_SOURCES += syscallx.c
libsilofs_infra_la_SOURCES += thread.c
libsilofs_infra_la_SOURCES += time.c
libsilofs_infra_la_SOURCES += utility.c
libsilofs_infra_la_SOURCES += version.c

libsilofs_LTLIBRARIES += libsilofs_fs.la
libsilofs_fs_la_LDFLAGS = $(NULL)
libsilofs_fs_la_LDFLAGS += $(PTHREAD_CFLAGS) $(PTHREAD_DEF)
libsilofs_fs_la_LDFLAGS += -version-info 0
libsilofs_fs_la_CPPFLAGS = $(NULL)
libsilofs_fs_la_CPPFLAGS += -I$(top_srcdir)/include
libsilofs_fs_la_CPPFLAGS += -DSILOFS_USE_FS_PRIVATE=1
libsilofs_fs_la_LIBADD = $(NULL)
libsilofs_fs_la_LIBADD += @LIBS@
libsilofs_fs_la_LIBADD += $(PTHREAD_LIBS)
libsilofs_fs_la_SOURCES = $(NULL)
libsilofs_fs_la_SOURCES += address.c
libsilofs_fs_la_SOURCES += boot.c
libsilofs_fs_la_SOURCES += cache.c
libsilofs_fs_la_SOURCES += crypto.c
libsilofs_fs_la_SOURCES += dir.c
libsilofs_fs_la_SOURCES += exec.c
libsilofs_fs_la_SOURCES += file.c
libsilofs_fs_la_SOURCES += flush.c
libsilofs_fs_la_SOURCES += fuseq.c
libsilofs_fs_la_SOURCES += guarantee.c
libsilofs_fs_la_SOURCES += idmap.c
libsilofs_fs_la_SOURCES += inode.c
libsilofs_fs_la_SOURCES += inomap.c
libsilofs_fs_la_SOURCES += inspect.c
libsilofs_fs_la_SOURCES += itable.c
libsilofs_fs_la_SOURCES += kcopy.c
libsilofs_fs_la_SOURCES += mntsvc.c
libsilofs_fs_la_SOURCES += namei.c
libsilofs_fs_la_SOURCES += nodes.c
libsilofs_fs_la_SOURCES += opers.c
libsilofs_fs_la_SOURCES += pack.c
libsilofs_fs_la_SOURCES += repo.c
libsilofs_fs_la_SOURCES += spclaim.c
libsilofs_fs_la_SOURCES += spmaps.c
libsilofs_fs_la_SOURCES += spxmap.c
libsilofs_fs_la_SOURCES += stage.c
libsilofs_fs_la_SOURCES += stats.c
libsilofs_fs_la_SOURCES += super.c
libsilofs_fs_la_SOURCES += symlink.c
libsilofs_fs_la_SOURCES += task.c
libsilofs_fs_la_SOURCES += uber.c
libsilofs_fs_la_SOURCES += unrefs.c
libsilofs_fs_la_SOURCES += walk.c
libsilofs_fs_la_SOURCES += xattr.c
libsilofs_fs_la_SOURCES += zcmpr.c

