-include $(top_builddir)/common.mk

libsilofs_infradir = $(libdir)
libsilofs_infra_LTLIBRARIES = libsilofs_infra.la
libsilofs_infra_la_LDFLAGS = $(NULL)
libsilofs_infra_la_LDFLAGS += $(PTHREAD_CFLAGS) $(PTHREAD_DEF)
libsilofs_infra_la_LDFLAGS += -version-info 0
libsilofs_infra_la_CPPFLAGS = $(NULL)
libsilofs_infra_la_CPPFLAGS += -I$(top_srcdir)/include
libsilofs_infra_la_LIBADD = $(NULL)
libsilofs_infra_la_LIBADD += @LIBS@
libsilofs_infra_la_LIBADD += $(PTHREAD_LIBS)
libsilofs_infra_la_SOURCES = $(NULL)
libsilofs_infra_la_SOURCES += infra/avl.c
libsilofs_infra_la_SOURCES += infra/base64.c
libsilofs_infra_la_SOURCES += infra/bytebuf.c
libsilofs_infra_la_SOURCES += infra/iovec.c
libsilofs_infra_la_SOURCES += infra/hash.c
libsilofs_infra_la_SOURCES += infra/list.c
libsilofs_infra_la_SOURCES += infra/logging.c
libsilofs_infra_la_SOURCES += infra/panic.c
libsilofs_infra_la_SOURCES += infra/pipe.c
libsilofs_infra_la_SOURCES += infra/qalloc.c
libsilofs_infra_la_SOURCES += infra/random.c
libsilofs_infra_la_SOURCES += infra/socket.c
libsilofs_infra_la_SOURCES += infra/strings.c
libsilofs_infra_la_SOURCES += infra/syscall.c
libsilofs_infra_la_SOURCES += infra/syscallx.c
libsilofs_infra_la_SOURCES += infra/thread.c
libsilofs_infra_la_SOURCES += infra/time.c
libsilofs_infra_la_SOURCES += infra/utility.c
libsilofs_infra_la_SOURCES += infra/version.c

libsilofs_fsdir = $(libdir)
libsilofs_fs_LTLIBRARIES = libsilofs_fs.la
libsilofs_fs_la_LDFLAGS = $(NULL)
libsilofs_fs_la_LDFLAGS += $(PTHREAD_CFLAGS) $(PTHREAD_DEF)
libsilofs_fs_la_LDFLAGS += -version-info 0
libsilofs_fs_la_CPPFLAGS = $(NULL)
libsilofs_fs_la_CPPFLAGS += -I$(top_srcdir)/include
libsilofs_fs_la_CPPFLAGS += -DSILOFS_USE_FS_PRIVATE=1
libsilofs_fs_la_LIBADD = $(NULL)
libsilofs_fs_la_LIBADD += @LIBS@
libsilofs_fs_la_LIBADD += $(PTHREAD_LIBS)
libsilofs_fs_la_SOURCES = $(NULL)
libsilofs_fs_la_SOURCES += fs/address.c
libsilofs_fs_la_SOURCES += fs/boot.c
libsilofs_fs_la_SOURCES += fs/cache.c
libsilofs_fs_la_SOURCES += fs/crypto.c
libsilofs_fs_la_SOURCES += fs/dir.c
libsilofs_fs_la_SOURCES += fs/exec.c
libsilofs_fs_la_SOURCES += fs/file.c
libsilofs_fs_la_SOURCES += fs/flush.c
libsilofs_fs_la_SOURCES += fs/fuseq.c
libsilofs_fs_la_SOURCES += fs/guarantee.c
libsilofs_fs_la_SOURCES += fs/idmap.c
libsilofs_fs_la_SOURCES += fs/inode.c
libsilofs_fs_la_SOURCES += fs/inspect.c
libsilofs_fs_la_SOURCES += fs/mntsvc.c
libsilofs_fs_la_SOURCES += fs/namei.c
libsilofs_fs_la_SOURCES += fs/nodes.c
libsilofs_fs_la_SOURCES += fs/opers.c
libsilofs_fs_la_SOURCES += fs/repo.c
libsilofs_fs_la_SOURCES += fs/spclaim.c
libsilofs_fs_la_SOURCES += fs/spmaps.c
libsilofs_fs_la_SOURCES += fs/spxmap.c
libsilofs_fs_la_SOURCES += fs/stage.c
libsilofs_fs_la_SOURCES += fs/stats.c
libsilofs_fs_la_SOURCES += fs/super.c
libsilofs_fs_la_SOURCES += fs/symlink.c
libsilofs_fs_la_SOURCES += fs/task.c
libsilofs_fs_la_SOURCES += fs/uber.c
libsilofs_fs_la_SOURCES += fs/unrefs.c
libsilofs_fs_la_SOURCES += fs/walk.c
libsilofs_fs_la_SOURCES += fs/xattr.c
libsilofs_fs_la_SOURCES += fs/zcmpr.c
