-include $(top_builddir)/common.mk

AM_CFLAGS = $(WARN_CFLAGS)

libsilofsdir = $(libdir)
libsilofs_LTLIBRARIES = libsilofs.la
libsilofs_la_LDFLAGS = $(NULL)
libsilofs_la_LDFLAGS += $(PTHREAD_CFLAGS) $(PTHREAD_DEF)
libsilofs_la_LDFLAGS += -version-info 0
libsilofs_la_CPPFLAGS = $(NULL)
libsilofs_la_CPPFLAGS += -I$(top_srcdir)/include
libsilofs_la_CPPFLAGS += -DSILOFS_USE_PRIVATE=1
libsilofs_la_LIBADD = $(NULL)
libsilofs_la_LIBADD += @LIBS@
libsilofs_la_LIBADD += $(PTHREAD_LIBS)
libsilofs_la_SOURCES = $(NULL)
libsilofs_la_SOURCES += initlib.c
libsilofs_la_SOURCES += sys/syscall.c
libsilofs_la_SOURCES += sys/syscallx.c
libsilofs_la_SOURCES += infra/avl.c
libsilofs_la_SOURCES += infra/base64.c
libsilofs_la_SOURCES += infra/bytebuf.c
libsilofs_la_SOURCES += infra/iovec.c
libsilofs_la_SOURCES += infra/hash.c
libsilofs_la_SOURCES += infra/list.c
libsilofs_la_SOURCES += infra/logging.c
libsilofs_la_SOURCES += infra/panic.c
libsilofs_la_SOURCES += infra/pipe.c
libsilofs_la_SOURCES += infra/qalloc.c
libsilofs_la_SOURCES += infra/random.c
libsilofs_la_SOURCES += infra/socket.c
libsilofs_la_SOURCES += infra/thread.c
libsilofs_la_SOURCES += infra/time.c
libsilofs_la_SOURCES += infra/zcmpr.c
libsilofs_la_SOURCES += str/ascii.c
libsilofs_la_SOURCES += str/strbuf.c
libsilofs_la_SOURCES += str/strchr.c
libsilofs_la_SOURCES += str/strspan.c
libsilofs_la_SOURCES += str/strview.c
libsilofs_la_SOURCES += crypt/cipher.c
libsilofs_la_SOURCES += crypt/gcry.c
libsilofs_la_SOURCES += crypt/ivkey.c
libsilofs_la_SOURCES += crypt/mdigest.c
libsilofs_la_SOURCES += crypt/passwd.c
libsilofs_la_SOURCES += addr/blobid.c
libsilofs_la_SOURCES += addr/caddr.c
libsilofs_la_SOURCES += addr/laddr.c
libsilofs_la_SOURCES += addr/ltype.c
libsilofs_la_SOURCES += addr/meta.c
libsilofs_la_SOURCES += addr/offlba.c
libsilofs_la_SOURCES += addr/paddr.c
libsilofs_la_SOURCES += addr/uaddr.c
libsilofs_la_SOURCES += addr/vaddr.c
libsilofs_la_SOURCES += hmdq/dirtyq.c
libsilofs_la_SOURCES += hmdq/hmapq.c
libsilofs_la_SOURCES += boot.c
libsilofs_la_SOURCES += bstore.c
libsilofs_la_SOURCES += claim.c
libsilofs_la_SOURCES += delfs.c
libsilofs_la_SOURCES += dir.c
libsilofs_la_SOURCES += encdec.c
libsilofs_la_SOURCES += file.c
libsilofs_la_SOURCES += flush.c
libsilofs_la_SOURCES += fuseq.c
libsilofs_la_SOURCES += idsmap.c
libsilofs_la_SOURCES += inode.c
libsilofs_la_SOURCES += inspect.c
libsilofs_la_SOURCES += lcache.c
libsilofs_la_SOURCES += lnodes.c
libsilofs_la_SOURCES += mntsvc.c
libsilofs_la_SOURCES += namei.c
libsilofs_la_SOURCES += opers.c
libsilofs_la_SOURCES += pack.c
libsilofs_la_SOURCES += pcache.c
libsilofs_la_SOURCES += pnodes.c
libsilofs_la_SOURCES += repo.c
libsilofs_la_SOURCES += spmaps.c
libsilofs_la_SOURCES += spxmap.c
libsilofs_la_SOURCES += stats.c
libsilofs_la_SOURCES += super.c
libsilofs_la_SOURCES += symlink.c
libsilofs_la_SOURCES += task.c
libsilofs_la_SOURCES += fsenv.c
libsilofs_la_SOURCES += ustage.c
libsilofs_la_SOURCES += vstage.c
libsilofs_la_SOURCES += walk.c
libsilofs_la_SOURCES += xattr.c
libsilofs_la_SOURCES += execlib.c
libsilofs_la_SOURCES += version.c
