EXTRA_DIST = $(NULL)
EXTRA_DIST += checkcstyle.py
EXTRA_DIST += clangformat.sh
EXTRA_DIST += clangscanbuild.sh
EXTRA_DIST += clangtidy.sh
EXTRA_DIST += ddreadwrite.sh
EXTRA_DIST += fio2csv.sh
EXTRA_DIST += fio2plot.py
EXTRA_DIST += fsstress.sh
EXTRA_DIST += gitarchive.sh
EXTRA_DIST += todolist.sh
EXTRA_DIST += torturefs.sh
EXTRA_DIST += valgrind-memcheck.sh
EXTRA_DIST += requiredeps.sh
EXTRA_DIST += silofs-gdb-bt.sh
EXTRA_DIST += silofs-journalctl.sh

