EXTRA_DIST = $(NULL)
EXTRA_DIST += checkcodefmt.sh
EXTRA_DIST += checkcstyle.py
EXTRA_DIST += clangscanbuild.sh
EXTRA_DIST += clangtidy.sh
EXTRA_DIST += ddreadwrite.sh
EXTRA_DIST += fio-exec-to-json.sh
EXTRA_DIST += fio-json-to-plot.py
EXTRA_DIST += fsstress.sh
EXTRA_DIST += gitarchive.sh
EXTRA_DIST += requiredeps.sh
EXTRA_DIST += silofs-gdb-bt.sh
EXTRA_DIST += silofs-journalctl.sh
EXTRA_DIST += todolist.sh
EXTRA_DIST += torturefs.sh
EXTRA_DIST += valgrind-memcheck.sh
