-include $(top_builddir)/common.mk

libsilofsinfradir = $(libdir)
libsilofsinfra_LTLIBRARIES = libsilofsinfra.la
libsilofsinfra_la_LDFLAGS = $(NULL)
libsilofsinfra_la_LDFLAGS += $(PTHREAD_CFLAGS) $(PTHREAD_DEF)
libsilofsinfra_la_LDFLAGS += -version-info 0
libsilofsinfra_la_CPPFLAGS = $(NULL)
libsilofsinfra_la_CPPFLAGS += -I$(top_srcdir)/include
libsilofsinfra_la_LIBADD = @LIBS@
libsilofsinfra_la_LIBADD += $(PTHREAD_LIBS)
libsilofsinfra_la_SOURCES = $(NULL)
libsilofsinfra_la_SOURCES += avl.c
libsilofsinfra_la_SOURCES += base64.c
libsilofsinfra_la_SOURCES += fiovec.c
libsilofsinfra_la_SOURCES += list.c
libsilofsinfra_la_SOURCES += logging.c
libsilofsinfra_la_SOURCES += panic.c
libsilofsinfra_la_SOURCES += pipe.c
libsilofsinfra_la_SOURCES += qalloc.c
libsilofsinfra_la_SOURCES += random.c
libsilofsinfra_la_SOURCES += slice.c
libsilofsinfra_la_SOURCES += socket.c
libsilofsinfra_la_SOURCES += strings.c
libsilofsinfra_la_SOURCES += syscall.c
libsilofsinfra_la_SOURCES += syscallx.c
libsilofsinfra_la_SOURCES += thread.c
libsilofsinfra_la_SOURCES += time.c
libsilofsinfra_la_SOURCES += utility.c
libsilofsinfra_la_SOURCES += version.c
